add logic from splash screen, welcome page, sign in and up

--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/welcome"
+    android:id="@+id/Welcome"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".welcome">
+    tools:context=".WelcomePage">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -142,7 +141,7 @@
 
         <!-- Continue Button -->
         <Button
-            android:id="@+id/continueButton"
+            android:id="@+id/nextButton"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_alignParentBottom="true"
