--- a/app/src/main/res/layout/createaccount_page.xml
+++ b/app/src/main/res/layout/createaccount_page.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/createAccount"
+    android:id="@+id/account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".create_account">
+    tools:context=".createAccount">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -60,6 +60,7 @@
             >
 
             <Button
+                android:id="@+id/signInButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign in"
@@ -68,6 +69,7 @@
                 />
 
             <Button
+                android:id="@+id/signUpButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign up"
