--- a/app/src/main/res/layout/sign_in_form_page.xml
+++ b/app/src/main/res/layout/sign_in_form_page.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/signInForm"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInForm">
+    tools:context=".SignIn">
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                 android:textColor="#D32F2F"/>
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/nameEditText"
+                android:id="@+id/signInName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#D3D3D3"
@@ -87,7 +87,7 @@
                 android:textColor="#D32F2F"/>
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_toggle"
+                android:id="@+id/signInPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#D3D3D3"
