membuat database helper dan merapikan design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="soft_red">#EF1D26</color>
     <color name="grey">#EEEEEE</color>
+    <color name="dark_grey">#272727</color>
 </resources>
