--- a/app/src/main/res/layout/sign_up_form_page.xml
+++ b/app/src/main/res/layout/sign_up_form_page.xml
@@ -10,57 +10,56 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/welcomeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:textSize="24sp"
-            android:textColor="#000000"
-            android:textStyle="bold"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="90dp"
-            android:layout_marginBottom="60dp"/>
+            android:layout_marginBottom="60dp"
+            android:text="Sign Up"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="150dp"
             android:layout_height="130dp"
             android:layout_marginLeft="140dp"
-            android:layout_marginRight="140dp"
             android:layout_marginTop="145dp"
+            android:layout_marginRight="140dp"
             android:scaleType="fitCenter"
             android:src="@drawable/login" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="140dp"
             android:gravity="center"
             android:orientation="vertical"
-            android:layout_alignParentBottom="true"
-            android:padding="10dp"
-            android:layout_marginBottom="140dp"
-            >
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="10dp"
-                >
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Name"
+                    android:textColor="#D32F2F"
                     android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textColor="#D32F2F"/>
+                    android:textStyle="bold" />
 
-                <com.google.android.material.textfield.TextInputEditText
+                <EditText
                     android:id="@+id/signUpName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -68,7 +67,7 @@
                     android:hint="Your Full Name"
                     android:padding="10dp"
                     android:textColor="#000000"
-                    android:textColorHint="#888888"/>
+                    android:textColorHint="#888888" />
 
             </LinearLayout>
 
@@ -77,18 +76,17 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="10dp"
-                >
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="E-Mail"
+                    android:textColor="#D32F2F"
                     android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textColor="#D32F2F"/>
+                    android:textStyle="bold" />
 
-                <com.google.android.material.textfield.TextInputEditText
+                <EditText
                     android:id="@+id/signUpEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -96,7 +94,7 @@
                     android:hint="Your Email"
                     android:padding="10dp"
                     android:textColor="#000000"
-                    android:textColorHint="#888888"/>
+                    android:textColorHint="#888888" />
 
             </LinearLayout>
 
@@ -105,26 +103,26 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="10dp"
-                >
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Password"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textColor="#D32F2F"/>
+                    android:textColor="#D32F2F"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                <com.google.android.material.textfield.TextInputEditText
+                <EditText
                     android:id="@+id/signUpPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#D3D3D3"
                     android:hint="Your Password"
+                    android:inputType="textPassword"
                     android:padding="10dp"
                     android:textColor="#000000"
-                    android:textColorHint="#888888"/>
+                    android:textColorHint="#888888" />
 
             </LinearLayout>
 
@@ -132,16 +130,25 @@
 
 
         <Button
-            android:id="@+id/continueButton"
+            android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="60dp"
             android:layout_marginBottom="85dp"
             android:background="#D32F2F"
-            android:text="Continue"
+            android:text="Sign Up"
             android:textColor="#FFFFFF" />
 
+        <TextView
+            android:id="@+id/goToLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/signUpButton"
+            android:layout_marginTop="-50dp"
+            android:gravity="center"
+            android:text="Already have an account? Login"
+            android:textColor="@color/dark_grey" />
 
     </RelativeLayout>
 
