--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:id="@+id/account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".createAccount">
+    tools:context=".CreateAccountActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
