--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -90,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#D3D3D3"
                 android:hint="Your Password"
+                android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColor="#000000"
                 android:textColorHint="#888888" />
