--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="Username"
                 android:textColor="#D32F2F"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#D3D3D3"
-                android:hint="Your Full Name"
+                android:hint="Enter Username"
                 android:padding="10dp"
                 android:textColor="#000000"
                 android:textColorHint="#888888" />
@@ -89,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#D3D3D3"
-                android:hint="Your Password"
+                android:hint="Enter Password"
                 android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColor="#000000"
