--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -54,7 +54,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:text="Username"
                     android:textColor="#D32F2F"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -64,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#D3D3D3"
-                    android:hint="Your Full Name"
+                    android:hint="Enter Username"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#888888" />
@@ -91,7 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#D3D3D3"
-                    android:hint="Your Email"
+                    android:hint="Enter E-mail"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#888888" />
@@ -118,7 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#D3D3D3"
-                    android:hint="Your Password"
+                    android:hint="Enter Password"
                     android:inputType="textPassword"
                     android:padding="10dp"
                     android:textColor="#000000"
