--- a/app/src/main/res/layout/activity_completed_task.xml
+++ b/app/src/main/res/layout/activity_completed_task.xml
@@ -36,20 +36,37 @@
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
-    <!-- Title -->
+    <!-- Title "Completed Tasks" -->
     <TextView
         android:id="@+id/completedTitle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Completed Tasks"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/backLayout"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/completedRecyclerView"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
+
+    <!-- TextView Delete All -->
+    <TextView
+        android:id="@+id/deleteAllText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete All"
+        android:textColor="#EF1D26"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:padding="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toTopOf="@id/completedTitle"
+        app:layout_constraintBottom_toBottomOf="@id/completedTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="1dp"/>
+        android:layout_marginEnd="16dp"/>
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
