add: styles.xml untuk mengubah warna pada datepicker dan timepicker serta checkbox

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -23,7 +23,8 @@
                 android:id="@+id/taskCheckbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:buttonTint="@drawable/checkbox_selector"/>
 
 
             <TextView
